--- a/Echoes/Base.lproj/Main.storyboard
+++ b/Echoes/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHP-mI-kKS" userLabel="EquipmentHelmet" customClass="LCKItemButton">
-                                <rect key="frame" x="350" y="35" width="50" height="50"/>
+                                <rect key="frame" x="275" y="35" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="MzF-zN-CcS"/>
                                     <constraint firstAttribute="width" constant="50" id="hYS-2f-oBk"/>
@@ -176,7 +176,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n7P-e8-J8t" userLabel="EquipmentSpell1" customClass="LCKItemButton">
-                                <rect key="frame" x="152" y="280" width="36" height="36"/>
+                                <rect key="frame" x="152" y="275" width="36" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="eX6-R3-Deq"/>
                                     <constraint firstAttribute="width" constant="36" id="ybn-cs-5BI"/>
@@ -189,7 +189,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cjL-yb-kyb" userLabel="EquipmentSpell2" customClass="LCKItemButton">
-                                <rect key="frame" x="198" y="280" width="36" height="36"/>
+                                <rect key="frame" x="198" y="275" width="36" height="36"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -198,7 +198,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7UR-hi-74E" userLabel="EquipmentSpell3" customClass="LCKItemButton">
-                                <rect key="frame" x="152" y="326" width="36" height="36"/>
+                                <rect key="frame" x="152" y="321" width="36" height="36"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -207,7 +207,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kb-wS-brh" userLabel="EquipmentSpell4" customClass="LCKItemButton">
-                                <rect key="frame" x="198" y="326" width="36" height="36"/>
+                                <rect key="frame" x="198" y="321" width="36" height="36"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -293,7 +293,7 @@
                             <constraint firstItem="U3k-ex-baV" firstAttribute="centerX" secondItem="7D5-tH-Ejn" secondAttribute="centerX" id="4LY-CZ-oGP"/>
                             <constraint firstItem="oab-Ny-zTp" firstAttribute="top" secondItem="U3k-ex-baV" secondAttribute="bottom" constant="20" id="67d-qY-hUO"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="top" secondItem="ar4-85-oMt" secondAttribute="top" constant="5" id="7XB-2j-1sR"/>
-                            <constraint firstItem="n7P-e8-J8t" firstAttribute="top" secondItem="yya-Wz-xsE" secondAttribute="bottom" constant="40" id="8K2-FL-hkf"/>
+                            <constraint firstItem="n7P-e8-J8t" firstAttribute="top" secondItem="yya-Wz-xsE" secondAttribute="bottom" constant="35" id="8K2-FL-hkf"/>
                             <constraint firstItem="7UR-hi-74E" firstAttribute="top" secondItem="7Kb-wS-brh" secondAttribute="top" id="8KA-Ga-edW"/>
                             <constraint firstItem="Tfq-jD-en0" firstAttribute="centerX" secondItem="U3k-ex-baV" secondAttribute="centerX" id="9D2-ZC-alt"/>
                             <constraint firstItem="cjL-yb-kyb" firstAttribute="centerX" secondItem="7Kb-wS-brh" secondAttribute="centerX" id="Aeo-8a-9lV"/>
@@ -315,6 +315,7 @@
                             <constraint firstAttribute="centerX" secondItem="U3k-ex-baV" secondAttribute="centerX" id="Xhv-Z6-L8Z"/>
                             <constraint firstItem="cjL-yb-kyb" firstAttribute="leading" secondItem="n7P-e8-J8t" secondAttribute="trailing" constant="10" id="ZSS-hY-nHY"/>
                             <constraint firstItem="U3k-ex-baV" firstAttribute="leading" secondItem="ar4-85-oMt" secondAttribute="trailing" constant="10" id="Zqw-yg-0JJ"/>
+                            <constraint firstItem="IHP-mI-kKS" firstAttribute="centerX" secondItem="U3k-ex-baV" secondAttribute="centerX" id="aOM-4c-tka"/>
                             <constraint firstItem="n7P-e8-J8t" firstAttribute="centerX" secondItem="yya-Wz-xsE" secondAttribute="centerX" constant="-25" id="b65-ij-a6H"/>
                             <constraint firstAttribute="centerX" secondItem="EmM-eE-XlB" secondAttribute="centerX" id="bx9-ma-b99"/>
                             <constraint firstItem="cK2-iC-meJ" firstAttribute="centerY" secondItem="ELO-qo-6rC" secondAttribute="centerY" constant="-3" id="cGC-Yh-YPq"/>
@@ -338,6 +339,7 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="zN9-Iu-kUw"/>
                                 <exclude reference="67d-qY-hUO"/>
                                 <exclude reference="G2t-yb-TQW"/>
                             </mask>
